tests/fixtures/positive/design/InnerClassesCannotHaveStaticMembers.cls
public class Outer {
    public class Inner {
        public Integer value;
        public void method() {
            // Non-static members - valid
        }
    }
}

